@@ -112,6 +112,9 @@ package DXM;
 				iso => '$_[0] Isolated',
 				isou => '$_[0] UnIsolated',
 				isoc => '$_[0] created and Isolated',
+				isoari => 'there is an input route filter for $_[0]; clear/route input $_[0] first',
+				isoaro => 'there is an output route filter for $_[0]; clear/route $_[0] first',
+				isow => '$_[0] is isolated; unset/isolate $_[0] first',
 				l1 => 'Sorry $_[0], you are already logged on on another channel',
 				l2 => 'Hello $_[0], this is $main::mycall in $main::myqth\nrunning DXSpider V$main::version build $main::build',
 				lang => 'Language is now $_[0]',
